ch7inclassnotes-ehbrightwell
updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Door County Wildflowers</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="style.css" media="screen">
-    <link rel="stylesheet" href="stylePring.css" media="print">
+    <link rel="stylesheet" href="stylePrint.css" media="print">
 </head>
 <body>
 <div id="container">
